
2008-10-13 (alauo):

  - RevoluteJoint is now an abstract class. Use RevoluteJoint::make()
    to construct an instance.

2008-10-3 (alauo):

  - An implementation of Stefano Carpins ARW path planner.

2008-09-22 (alauo):

  - Collision detector construction optimized for the planning for a
    specific device and state.

2008-9-8 (alauo):

  - rw.getCollisionDetector() and rw.getCollisionStrategy() for Lua
    interface.

2008-8-1 (alauo):

  - New QIKSampler class.

  - Deprecated DeviceModel class removed.

2008-7-30 (alauo):

  - "Manhattan" is the correct spelling.

  - Metric<T> is now a metric on T and not a metric on
    boost::numeric::ublas::vector<T>. QMetric is a typedef for
    Metric<Q>. Use MetricFactory to construct your QMetric values.

2008-7-23 (alauo):

  - New path planner class: PlannerConstraint.

2008-7-22 (alauo):

  - New Models::getStatePath() utility functions.

2008-7-22 (alauo):

  - New or renamed path planner classes: QExpand, QEdgeConstraint,
    QToTPlanner, QToQPlanner, QToQSamplerPlanner.

  - Removal of deprecated or non-maintained classes:
    StraightLinePathPlanner, lazyprm.

  - CollisionDetector takes Ptr types as argument in the constructor.

2008-7-1 (alauo):

  - XML::printTree() utility.

  - "Smart" default collision setup removed from TUL loader.

2008-6-24 (alauo):

  - Bugfix for the TUL loader: The initial state for movable frames was
  not set.

  - New SBL path planner.

  - Abstractions for path planners: QSampler, QNormalizer,
    StateConstraint, QConstraint, StopCriteria.

  - Automatic exclusion of statically linked frames in the collision
    detector.

  - A Ptr<T> convention for passing of pointers to objects.

  - Path planners can now be aborted by a stop criteria.

  - A Models utilities file.

2008-6-8 (alauo):

  - Image takes a pointer to vector<unsigned char> as argument (and
    not a reference).

2008-6-4 (alauo):

  - ProximityStrategy::clearFrame() now required on the interface.
