@@ -33,7 +33,7 @@ PassivePrismaticFrame::PassivePrismaticFrame(
     double offset)
     :
     Frame(0, name),
-    _helper(name, transform),
+    _helper(PrismaticJoint::make(name, transform)),
     _owner(owner),
     _scale(scale),
     _offset(offset)
@@ -49,7 +49,7 @@ void PassivePrismaticFrame::doGetTransform(
     const double q_owner = *_owner->getQ(state);
     const double q = _scale * q_owner + _offset;
 
-    _helper.getJointValueTransform(parent, q, result);
+    _helper->getJointValueTransform(parent, q, result);
 }
 
 Transform3D<> PassivePrismaticFrame::getTransform(const State& state) const
